--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "ts-node-dev": "^1.1.6"
+    "mysql": "^2.18.1",
+    "ts-node-dev": "^1.1.6",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
