--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --ignore-watch node_modules src/server.ts"
+    "start": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "run-migrations": "ts-node-dev ./node_modules/typeorm/cli.js migration:run",
+    "revert-migrations": "ts-node-dev ./node_modules/typeorm/cli.js migration:revert"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mysql": "^2.18.1",
     "ts-node-dev": "^1.1.6",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.2.3"
   }
 }
