--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "ts-node-dev": "^1.1.6",
     "typeorm": "^0.2.31",
@@ -23,6 +25,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
     "@types/uuid": "^8.3.0",
     "typescript": "^4.2.3"
   }
