--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "start": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "run-migrations": "ts-node-dev ./node_modules/typeorm/cli.js migration:run",
-    "revert-migrations": "ts-node-dev ./node_modules/typeorm/cli.js migration:revert"
+    "undo-migrations": "ts-node-dev ./node_modules/typeorm/cli.js migration:revert"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "ts-node-dev": "^1.1.6",
@@ -25,6 +27,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
     "@types/uuid": "^8.3.0",
     "typescript": "^4.2.3"
